[package]
name = "include_gif"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/LedgerHQ/ledger-device-rust-sdk"
description = "procedural macro that packs a gif image into a byte representation"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
gif = "0.11.3"
