[package]
name = "testmacro"
version = "0.1.0"
authors = ["yhql <yhql@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/LedgerHQ/ledger-device-rust-sdk"
description = "procedural macro used to run unit and integration tests"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"